--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -5,12 +5,18 @@
 
     <Button
         android:layout_width="30dp"
-        android:layout_height="30dp" />    
+        android:layout_height="30dp"
+        android:id="@+id/nav_button"
+        android:layout_marginLeft="10dp"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/ic_home"/>
     
     <TextView
         android:id="@+id/title_city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#fff"
         android:layout_centerInParent="true"
         android:textSize="20sp"/>
 
@@ -20,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         android:textColor="#fff"
         android:textSize="16sp"/>
 
